--- a/index.html
+++ b/index.html
@@ -19,24 +19,35 @@
 </html>
 
 <!-- NAVIGATION -->
-       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-           <div class="container-fluid">
-               <a class="navbar-brand" href="index.html">Navbar</a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                   <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                       <li class="nav-item">
-                       <a class="nav-link" aria-current="page" href="#">Home</a>
-                       </li>
-                       <li class="nav-item">
-                       <a class="nav-link" href="#">Link</a>
-                       </li>
-                       <li class="nav-item">
-                           <a class="nav-link" href="#">About</a>
-                       </li>
-                   </ul>
-               </div>
-           </div>
-       </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark custom-navbar">
+    <div class="container-fluid">
+
+        <a class="navbar-brand custom-brand" href="index.html">
+            <span class="brand-box">
+    Wrestling
+    <span class="num-green">1</span>0<span class="num-red">1</span>
+    <img src="images/wrestling101logo.png" alt="Wrestling 101 Logo" class="brand-logo">
+</span>
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            </ul>
+        </div>
+
+    </div>
+</nav>
+
+
+
+
+
