--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
     </div>
 </nav>
 
+ <!-- CENTERED FAQ IMAGE -->
+    <div class="faq-logo-wrapper">
+        <img src="images/faqlogo.png" alt="FAQ Logo" class="faq-logo">
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
+
+
 
 
 
