--- a/index.html
+++ b/index.html
@@ -120,12 +120,53 @@ focus on a solid stance and motion, using level changes, and mastering fundament
 leg attacks like the Single Leg, Double Leg, and High Crotch, as well as throws such as the Fireman's Carry, Hip Toss, and Suplex
 </p>
 
-<div align="left">
-    <h1>Here are some youtube videos about techniques</h1>
-    <p>https://www.youtube.com/watch?v=Bugf5PXVt-8</p> 
-    <p>https://www.youtube.com/watch?v=LsxnzFXJBPY&t=448s</p>
-    <p>https://www.youtube.com/watch?v=0q4-YtB2eFU</p>
-</div>
+
+    
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTube Grid</title>
+    <link rel="stylesheet" href="style.css">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTube Grid</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="video-grid">
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=Bugf5PXVt-8" allowfullscreen></iframe>
+        </div>
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=LsxnzFXJBPY&t=448s" allowfullscreen></iframe>
+        </div>
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=0q4-YtB2eFU" allowfullscreen></iframe>
+        </div>
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=vxjyRXZoDUo" allowfullscreen></iframe>
+        </div>
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=WcXQ3RtvMM0" allowfullscreen></iframe>
+        </div>
+        <div class="video-box">
+            <iframe src="https://www.youtube.com/watch?v=k0k_zZ4x2NA" allowfullscreen></iframe>
+        </div>
+    </div>
+
+</body>
+</html>
+
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+</html>
 
 
 
