--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ leg attacks like the Single Leg, Double Leg, and High Crotch, as well as throws 
             <iframe src="https://www.youtube.com/watch?v=WcXQ3RtvMM0" allowfullscreen></iframe>
         </div>
         <div class="video-box">
-            <iframe src="https://www.youtube.com/watch?v=k0k_zZ4x2NA" allowfullscreen></iframe>
+            <iframe src="https://youtu.be/k0k_zZ4x2NA?si=oOsdQ1QgCjtjzqaq" allowfullscreen></iframe>
         </div>
     </div>
 
