--- a/index.html
+++ b/index.html
@@ -162,11 +162,13 @@ leg attacks like the Single Leg, Double Leg, and High Crotch, as well as throws 
 </html>
 
 
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap a JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
-</html>
+</html> 
+
+
 
 
 
